@@ -1,5 +1,6 @@
 0.04
 - Documentation update.
+- Add Test::NoWarnings to tests.
 
 0.03 (July 15, 2012)
 - Update build system.
